--- a/c_b_git/gitops-k8s/redis-init-job.yml
+++ b/c_b_git/gitops-k8s/redis-init-job.yml
@@ -1,27 +1,26 @@
-#apiVersion: batch/v1
-#kind: Job
-#metadata:
-#  name: redis-cluster-init
-#  namespace: chalk-board-namespace
-#spec:
-#  template:
-#    metadata:
-#      labels:
-#        app: redis-cluster-init
-#    spec:
-#      containers:
-#        - name: redis-cluster-init
-#          image: redis:7-alpine
-#          command:
-#            - "redis-cli"
-#            - "--cluster"
-#            - "create"
-#            - "redis-stateful-0.redis-stateful:6379"
-#            - "redis-stateful-1.redis-stateful:6379"
-#            - "redis-stateful-2.redis-stateful:6379"
-#            - "redis-stateful-3.redis-stateful:6379"
-#            - "redis-stateful-4.redis-stateful:6379"
-#            - "redis-stateful-5.redis-stateful:6379"
-#            - "--cluster-replicas"
-#            - "1"
-#      restartPolicy: OnFailure
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: redis-cluster-creator
+  namespace: chalk-board-namespace
+spec:
+  template:
+    spec:
+      containers:
+        - name: redis-cluster-creator
+          image: redis:7-alpine
+          command:
+            - "sh"
+            - "-c"
+            - |
+              until [ $(redis-cli -h redis-cluster-headless-0.redis-cluster-headless.chalk-board-namespace.svc.cluster.local ping | grep PONG | wc -l) -eq 6 ]; do echo "waiting for redis nodes to be ready..."; sleep 5; done
+              redis-cli --cluster create \
+                redis-cluster-headless-0.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
+                redis-cluster-headless-1.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
+                redis-cluster-headless-2.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
+                redis-cluster-headless-3.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
+                redis-cluster-headless-4.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
+                redis-cluster-headless-5.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
+                --cluster-replicas 1 \
+                --cluster-yes
+      restartPolicy: Never
