--- a/c_b_git/gitops-k8s/redis-init-job.yml
+++ b/c_b_git/gitops-k8s/redis-init-job.yml
@@ -13,14 +13,14 @@ spec:
             - "sh"
             - "-c"
             - |
-              until [ $(redis-cli -h redis-cluster-headless-0.redis-cluster-headless.chalk-board-namespace.svc.cluster.local ping | grep PONG | wc -l) -eq 6 ]; do echo "waiting for redis nodes to be ready..."; sleep 5; done
+              until [ $(redis-cli -h redis-0.redis.chalk-board-namespace.svc.cluster.local ping | grep PONG | wc -l) -eq 6 ]; do echo "waiting for redis nodes to be ready..."; sleep 5; done
               redis-cli --cluster create \
-                redis-cluster-headless-0.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
-                redis-cluster-headless-1.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
-                redis-cluster-headless-2.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
-                redis-cluster-headless-3.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
-                redis-cluster-headless-4.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
-                redis-cluster-headless-5.redis-cluster-headless.chalk-board-namespace.svc.cluster.local:6379 \
+                redis-0.redis.chalk-board-namespace.svc.cluster.local:6379 \
+                redis-1.redis.chalk-board-namespace.svc.cluster.local:6379 \
+                redis-2.redis.chalk-board-namespace.svc.cluster.local:6379 \
+                redis-3.redis.chalk-board-namespace.svc.cluster.local:6379 \
+                redis-4.redis.chalk-board-namespace.svc.cluster.local:6379 \
+                redis-5.redis.chalk-board-namespace.svc.cluster.local:6379 \
                 --cluster-replicas 1 \
                 --cluster-yes
       restartPolicy: Never
