modified manifest files

--- a/c_b_git/gitops-k8s/logback-configmap.yml
+++ b/c_b_git/gitops-k8s/logback-configmap.yml
@@ -17,7 +17,7 @@ data:
                 <timeoutMs>1000</timeoutMs>
             </batch>
             <http>
-                <url>http://loki:${LOKI_PORT:-3100}/loki/api/v1/push</url>
+                <url>${LOKI_SERVICE_URL:-http://loki:3100}/loki/api/v1/push</url>
             </http>
             <labels>
                 app = ${application}
