modified manifest files

--- a/c_b_git/gitops-k8s/loki-deployment-service.yml
+++ b/c_b_git/gitops-k8s/loki-deployment-service.yml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: loki
           image: grafana/loki:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 3100
               name: http-metrics
