--- a/c_b_git/gitops-k8s/loki-configuration.yml
+++ b/c_b_git/gitops-k8s/loki-configuration.yml
@@ -5,9 +5,8 @@ metadata:
   namespace: chalk-board-namespace
 data:
   local-config.yaml: |
-    # Paste the content of your local-config.yaml file here
     auth_enabled: false
-    # https://grafana.com/docs/loki/latest/configure/#limits_config
+
     limits_config:
       allow_structured_metadata: true
       max_streams_per_user: 100000
@@ -15,9 +14,12 @@ data:
 
     server:
       http_listen_port: 3100
+      # Change to 0.0.0.0 to listen on all network interfaces
+      http_listen_address: 0.0.0.0
 
     common:
-      instance_addr: 127.0.0.1
+      # Change instance_addr to 0.0.0.0 to be accessible from other pods
+      instance_addr: 0.0.0.0
       path_prefix: /loki
       storage:
         filesystem:
@@ -39,6 +41,65 @@ data:
             period: 24h
 
     ruler:
-      alertmanager_url: http://localhost:9093
+      # Assuming Alertmanager is exposed via a service named 'alertmanager'
+      alertmanager_url: http://alertmanager.chalk-board-namespace.svc.cluster.local:9093
+
     analytics:
       reporting_enabled: false
+
+
+#apiVersion: v1
+#kind: ConfigMap
+#metadata:
+#  name: loki-config
+#  namespace: chalk-board-namespace
+#data:
+#  local-config.yaml: |
+#    auth_enabled: false
+#
+#    # https://grafana.com/docs/loki/latest/configure/#limits_config
+#    limits_config:
+#      allow_structured_metadata: true
+#      max_streams_per_user: 100000
+#      max_global_streams_per_user: 100000
+#
+#    server:
+#      http_listen_port: 3100
+#
+#    common:
+#      instance_addr: 127.0.0.1
+#      path_prefix: /loki
+#      storage:
+#        filesystem:
+#          chunks_directory: /loki/chunks
+#          rules_directory: /loki/rules
+#      replication_factor: 1
+#      ring:
+#        kvstore:
+#          store: inmemory
+#
+#    schema_config:
+#      configs:
+#        - from: 2020-10-24
+#          store: tsdb
+#          object_store: filesystem
+#          schema: v13
+#          index:
+#            prefix: index_
+#            period: 24h
+#
+#    ruler:
+#      alertmanager_url: http://localhost:9093
+#
+#    # By default, Loki will send anonymous, but uniquely-identifiable usage and configuration
+#    # analytics to Grafana Labs. These statistics are sent to https://stats.grafana.org/
+#    #
+#    # Statistics help us better understand how Loki is used, and they show us performance
+#    # levels for most users. This helps us prioritize features and documentation.
+#    # For more information on what's sent, look at
+#    # https://github.com/grafana/loki/blob/main/pkg/usagestats/stats.go
+#    # Refer to the buildReport method to see what goes into a report.
+#    #
+#    # If you would like to disable reporting, uncomment the following lines:
+#    analytics:
+#      reporting_enabled: false
