--- a/c_b_git/gitops-k8s/otel-collector-configuration.yml
+++ b/c_b_git/gitops-k8s/otel-collector-configuration.yml
@@ -5,44 +5,42 @@ metadata:
   namespace: chalk-board-namespace
 data:
   otel-collector.yml: |
-    # Paste the content of your otel-collector.yml file here
     receivers:
       otlp:
         protocols:
           http:
           grpc:
-
+    
     processors:
       # batch metrics before sending to reduce API usage
       batch:
-
+    
     exporters:
       logging:
         loglevel: debug
-
-      otlphttp/logs:
-        endpoint: http://loki:3100/otlp
-        logs_endpoint: http://loki:3100/otlp
-
+    
+      loki:
+        endpoint: "http://loki:3100/loki/api/v1/push"
+    
       prometheus:
         endpoint: "0.0.0.0:8889"
         const_labels:
           label1: value1
-
+    
       otlp:
         endpoint: "tempo:4317" # tor Tempo
         tls:
           insecure: true
-
+    
       zipkin:
         endpoint: "http://zipkin-all-in-one:9411/api/v2/spans"
         format: proto
-
+    
       jaeger:
         endpoint: jaeger-all-in-one:14250
         tls:
           insecure: true
-
+    
     # https://github.com/open-telemetry/opentelemetry-collector/blob/main/extension/README.md
     extensions:
       # responsible for responding to health check calls on behalf of the collector.
@@ -51,7 +49,7 @@ data:
       pprof:
       # serves as an http endpoint that provides live debugging data about instrumented components.
       zpages:
-
+    
     service:
       extensions: [health_check, pprof, zpages]
       pipelines:
@@ -65,4 +63,5 @@ data:
           exporters: [otlp,zipkin,jaeger]
         logs:
           receivers: [otlp]
-          exporters: [otlphttp/logs]
+          exporters: [loki]
+
