--- a/c_b_git/gitops-k8s/chalk-board-shared-configmap.yml
+++ b/c_b_git/gitops-k8s/chalk-board-shared-configmap.yml
@@ -16,10 +16,10 @@ data:
   AUTH_CLIENT_NAME: "JSL - Learning Center"
   AUTH_CLIENT_REDIRECT_URI: "http://chalk-keycloak/login/oauth2/code/keycloak"
   AUTH_CLIENT_AUTHORIZATION_GRANT_TYPE: "authorization_code"
-  OTEL_COLLECTOR_METRICS_URL: "http://otel-collector/v1/metrics"
-  OTEL_COLLECTOR_TRACES_URL: "http://otel-collector/v1/traces"
-  OTEL_EXPORTER_OTLP_ENDPOINT: "http://tempo"
-  GRAFANA_SERVICE_URL: "http://grafana"
+  OTEL_COLLECTOR_METRICS_URL: "http://otel-collector:4318/v1/metrics"
+  OTEL_COLLECTOR_TRACES_URL: "http://otel-collector:4318/v1/traces"
+  OTEL_EXPORTER_OTLP_ENDPOINT: "http://tempo:4317"
+  GRAFANA_SERVICE_URL: "http://grafana:3000"
   OTEL_SERVICE_NAME_GW: "gateway-service"
   OTEL_SERVICE_NAME_UI: "learning-ui"
   OTEL_SERVICE_NAME_LS: "learning-service"
