--- a/c_b_git/gitops-k8s/learning-ui-deployment-fixed.yml
+++ b/c_b_git/gitops-k8s/learning-ui-deployment-fixed.yml
@@ -72,29 +72,29 @@ spec:
               name: debug-port
             - containerPort: 8083
               name: app-port
-          livenessProbe:
-            httpGet:
-              path: /learning-ui-management/health/liveness
-              port: app-port
-            initialDelaySeconds: 120
-            periodSeconds: 30
-            timeoutSeconds: 5
-            failureThreshold: 3
-          readinessProbe:
-            httpGet:
-              path: /learning-ui-management/health/readiness
-              port: app-port
-            initialDelaySeconds: 30
-            periodSeconds: 15
-            timeoutSeconds: 3
-            failureThreshold: 3
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "1Gi"
-              cpu: "500m"
+#          livenessProbe:
+#            httpGet:
+#              path: /learning-ui-management/health/liveness
+#              port: app-port
+#            initialDelaySeconds: 120
+#            periodSeconds: 30
+#            timeoutSeconds: 5
+#            failureThreshold: 3
+#          readinessProbe:
+#            httpGet:
+#              path: /learning-ui-management/health/readiness
+#              port: app-port
+#            initialDelaySeconds: 30
+#            periodSeconds: 15
+#            timeoutSeconds: 3
+#            failureThreshold: 3
+#          resources:
+#            requests:
+#              memory: "512Mi"
+#              cpu: "250m"
+#            limits:
+#              memory: "1Gi"
+#              cpu: "500m"
           volumeMounts:
             - name: log-volume
               mountPath: /workspace/logs
