--- a/c_b_git/gitops-k8s/learning-service-deployment-fixed.yml
+++ b/c_b_git/gitops-k8s/learning-service-deployment-fixed.yml
@@ -82,29 +82,29 @@ spec:
               name: debug-port
             - containerPort: 8081
               name: app-port
-#          livenessProbe:
-#            httpGet:
-#              path: /learning-service-management/health/liveness
-#              port: app-port
-#            initialDelaySeconds: 120
-#            periodSeconds: 30
-#            timeoutSeconds: 5
-#            failureThreshold: 3
-#          readinessProbe:
-#            httpGet:
-#              path: /learning-service-management/health/readiness
-#              port: app-port
-#            initialDelaySeconds: 30
-#            periodSeconds: 15
-#            timeoutSeconds: 3
-#            failureThreshold: 3
-#          resources:
-#            requests:
-#              memory: "512Mi"
-#              cpu: "250m"
-#            limits:
-#              memory: "1Gi"
-#              cpu: "500m"
+          livenessProbe:
+            httpGet:
+              path: /learning-service-management/health/liveness
+              port: app-port
+            initialDelaySeconds: 120
+            periodSeconds: 30
+            timeoutSeconds: 5
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /learning-service-management/health/readiness
+              port: app-port
+            initialDelaySeconds: 30
+            periodSeconds: 15
+            timeoutSeconds: 3
+            failureThreshold: 3
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "500m"
           volumeMounts:
             - name: services-files-volume
               mountPath: /workspace/services_files
