--- a/c_b_git/gitops-k8s/learning-service-deployment-fixed.yml
+++ b/c_b_git/gitops-k8s/learning-service-deployment-fixed.yml
@@ -98,13 +98,13 @@ spec:
             periodSeconds: 15
             timeoutSeconds: 3
             failureThreshold: 3
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "1Gi"
-              cpu: "500m"
+#          resources:
+#            requests:
+#              memory: "512Mi"
+#              cpu: "250m"
+#            limits:
+#              memory: "1Gi"
+#              cpu: "500m"
           volumeMounts:
             - name: services-files-volume
               mountPath: /workspace/services_files
