--- a/c_b_git/gitops-k8s/learning-ui-deployment-fixed.yml
+++ b/c_b_git/gitops-k8s/learning-ui-deployment-fixed.yml
@@ -88,13 +88,13 @@ spec:
             periodSeconds: 15
             timeoutSeconds: 3
             failureThreshold: 3
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "1Gi"
-              cpu: "500m"
+#          resources:
+#            requests:
+#              memory: "512Mi"
+#              cpu: "250m"
+#            limits:
+#              memory: "1Gi"
+#              cpu: "500m"
           volumeMounts:
             - name: log-volume
               mountPath: /workspace/logs
