--- a/c_b_git/gitops-k8s/learning-ui-deployment-fixed.yml
+++ b/c_b_git/gitops-k8s/learning-ui-deployment-fixed.yml
@@ -72,22 +72,22 @@ spec:
               name: debug-port
             - containerPort: 8083
               name: app-port
-          livenessProbe:
-            httpGet:
-              path: /learning-ui-management/health/liveness
-              port: app-port
-            initialDelaySeconds: 120
-            periodSeconds: 30
-            timeoutSeconds: 5
-            failureThreshold: 3
-          readinessProbe:
-            httpGet:
-              path: /learning-ui-management/health/readiness
-              port: app-port
-            initialDelaySeconds: 30
-            periodSeconds: 15
-            timeoutSeconds: 3
-            failureThreshold: 3
+#          livenessProbe:
+#            httpGet:
+#              path: /learning-ui-management/health/liveness
+#              port: app-port
+#            initialDelaySeconds: 120
+#            periodSeconds: 30
+#            timeoutSeconds: 5
+#            failureThreshold: 3
+#          readinessProbe:
+#            httpGet:
+#              path: /learning-ui-management/health/readiness
+#              port: app-port
+#            initialDelaySeconds: 30
+#            periodSeconds: 15
+#            timeoutSeconds: 3
+#            failureThreshold: 3
 #          resources:
 #            requests:
 #              memory: "512Mi"
