modified manifest files

--- a/c_b_git/gitops-k8s/chalk-board-shared-configmap.yml
+++ b/c_b_git/gitops-k8s/chalk-board-shared-configmap.yml
@@ -24,8 +24,8 @@ data:
   OTEL_SERVICE_NAME_UI: "learning-ui"
   OTEL_SERVICE_NAME_LS: "learning-service"
   LOKI_HOST: "loki"
-  LEARNING_SERVICE_URL: "http://learning-service"
-  SERVER_SIDE_URL: "http://learning-ui"
+  LEARNING_SERVICE_URL: "http://learning-service:8081"
+  SERVER_SIDE_URL: "http://learning-ui:8083"
   SPRING_DATA_REDIS_HOST: "redis-service"
   MANAGEMENT_WEB_ENDPOINT_BASE_GW: "/gateway-service-management"
   MANAGEMENT_WEB_ENDPOINT_BASE_UI: "/learning-ui-management"
