modified manifest files

--- a/c_b_git/gitops-k8s/gateway-service-deployment-fixed.yml
+++ b/c_b_git/gitops-k8s/gateway-service-deployment-fixed.yml
@@ -104,10 +104,11 @@ spec:
                   name: chalkboard-secret
                   key: AUTH_CLIENT_SECRET
             - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI
-              valueFrom:
-                configMapKeyRef:
-                  name: chalkboard-shared-config
-                  key: KEYCLOAK_REALM
+              value: http://chalk-keycloak:7080/realms/chalk-board
+#              valueFrom:
+#                configMapKeyRef:
+#                  name: chalkboard-shared-config
+#                  key: KEYCLOAK_REALM
           ports:
             - containerPort: 8002
               name: debug-port
