modified manifest files

--- a/c_b_git/gitops-k8s/gateway-service-deployment-fixed.yml
+++ b/c_b_git/gitops-k8s/gateway-service-deployment-fixed.yml
@@ -103,11 +103,11 @@ spec:
                 secretKeyRef:
                   name: chalkboard-secret
                   key: AUTH_CLIENT_SECRET
-#            - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI
-#              valueFrom:
-#                configMapKeyRef:
-#                  name: chalkboard-shared-config
-#                  key: KEYCLOAK_REALM
+            - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI
+              valueFrom:
+                configMapKeyRef:
+                  name: chalkboard-shared-config
+                  key: KEYCLOAK_REALM
           ports:
             - containerPort: 8002
               name: debug-port
