modified manifest files

--- a/c_b_git/gitops-k8s/istio-ingress-gateway.yml
+++ b/c_b_git/gitops-k8s/istio-ingress-gateway.yml
@@ -12,7 +12,7 @@ spec:
         name: http
         protocol: HTTP
       hosts:
-        - "*"
+        - "gateway-service.chalk-board-namespace.svc.cluster.local"
 
 ---
 # gateway-service virtual service
